--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -34,6 +34,10 @@ body #signup-modal-main-container {
 	cursor: pointer;
 }
 
+.underline:hover {
+    text-decoration: underline;
+}
+
 /* ------------ Display Flex ------------ */
 .dfr {
 	display: flex;
@@ -74,6 +78,14 @@ body #signup-modal-main-container {
 	gap: 5em;
 }
 
+.gap-1px {
+	gap: 1px;
+}
+
+.gap-3px {
+	gap: 3px;
+}
+
 .gap-5px {
 	gap: 5px;
 }
@@ -102,6 +114,10 @@ body #signup-modal-main-container {
 
 .font-12 {
 	font-size: 12px;
+}
+
+.font-14 {
+	font-size: 14px;
 }
 
 .font-16 {
